crates/oxc_css/tests/error/less/detached-ruleset/1.snap
---
source: crates/oxc_css/tests/error.rs
---
error: expect token `;`, but found `{`
  ┌─ 1.less:1:4
  │
1 │ .a {
  │    ^


